nav in phone rudimentary looking good.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     <!-- font-family: 'Fraunces', serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600,800&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
 
     <!-- css file -->
     <link rel="stylesheet" href="./css/style.css">
     
 </head>
 <body>
-    hello world!!
+    <header class="nav-bar">
+        <p class="nav-bar__logo">sunnyside</p>
+        <svg id="nav-bar__hamburger-icon" width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill-rule="evenodd"/></svg>
+        <nav class="nav-bar__nav">
+            <a href="#" class="body-text">About</a>
+            <a href="#" class="body-text">Services</a>
+            <a href="#" class="body-text">Projects</a>
+            <a href="#" class="body-text">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
