--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="nav-bar">
         <p class="nav-bar__logo">sunnyside</p>
-        <svg id="nav-bar__hamburger-icon" width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill-rule="evenodd"/></svg>
+        <svg id="nav-bar__hamburger-icon" class="nav-bar__hamburger-icon" width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill-rule="evenodd"/></svg>
         <nav class="nav-bar__nav">
             <a href="#" class="body-text">About</a>
             <a href="#" class="body-text">Services</a>
