hamburger-icon working on nav-bar.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 
     <!-- css file -->
     <link rel="stylesheet" href="./css/style.css">
-    
+
+    <!-- js file -->
+    <script src="./js/main.js" defer></script>
+
 </head>
 <body>
-    <header class="nav-bar">
+    <header class="nav-bar" id="nav-bar">
         <p class="nav-bar__logo">sunnyside</p>
         <svg id="nav-bar__hamburger-icon" class="nav-bar__hamburger-icon" width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill-rule="evenodd"/></svg>
         <nav class="nav-bar__nav">
@@ -28,5 +31,10 @@
             <a href="#" class="body-text">Contact</a>
         </nav>
     </header>
+    <main>
+        <section classs="hero">
+            <img src="./imgs/desktop/" alt="">
+        </section>
+    </main>
 </body>
 </html>
