hero section ready.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font-family: 'Fraunces', serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600,800&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;800&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet"> 
 
     <!-- css file -->
     <link rel="stylesheet" href="./css/style.css">
@@ -32,8 +32,9 @@
         </nav>
     </header>
     <main>
-        <section classs="hero">
-            <img src="./imgs/desktop/" alt="">
+        <section class="hero">
+            <h1 class="hero__heading">we are creatives</h1>
+            <svg class="hero__down-arrow" width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
         </section>
     </main>
 </body>
