section brand-transform built.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font-family: 'Fraunces', serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;800&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200;600;800&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet"> 
 
     <!-- css file -->
     <link rel="stylesheet" href="./css/style.css">
@@ -35,6 +35,20 @@
         <section class="hero">
             <h1 class="hero__heading">we are creatives</h1>
             <svg class="hero__down-arrow" width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
+        </section>
+
+        <section class="brand-transform">
+            <div class="columns one-two-ordering">
+                <div class="column text-component">
+                    <h2 class="text-component__heading">Transform your brand</h1>
+                    <p class="text-component__paragraph">We are a full-service creative agency specializing in helping brands grow fast. 
+                        Engage your clients through compelling visuals that do most of the marketing for you.</p>
+                    <div>
+                        <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
+                    </div>
+                </div>
+                <div class="column image image--egg"></div>
+            </div>
         </section>
     </main>
 </body>
