--- a/index.html
+++ b/index.html
@@ -37,19 +37,38 @@
             <svg class="hero__down-arrow" width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
         </section>
 
-        <section class="brand-transform">
+        <section>
             <div class="columns one-two-ordering">
-                <div class="column text-component">
-                    <h2 class="text-component__heading">Transform your brand</h1>
-                    <p class="text-component__paragraph">We are a full-service creative agency specializing in helping brands grow fast. 
-                        Engage your clients through compelling visuals that do most of the marketing for you.</p>
-                    <div>
-                        <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
+                <div class="column">
+                    <div class="text-component">
+                        <h2 class="text-component__heading">Transform your brand</h1>
+                        <p class="text-component__paragraph">We are a full-service creative agency specializing in helping brands grow fast. 
+                            Engage your clients through compelling visuals that do most of the marketing for you.</p>
+                        <div>
+                            <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
+                        </div>
                     </div>
                 </div>
                 <div class="column image image--egg"></div>
             </div>
         </section>
+
+        <section>
+            <div class="columns">
+                <div class="column image image--glass"></div>
+                <div class="column">
+                    <div class="text-component">
+                        <h2 class="text-component__heading">Stand out to the right audience</h1>
+                        <p class="text-component__paragraph">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+                        <div>
+                            <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 </body>
 </html>
