show-component successfully implemented.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <div class="columns one-two-ordering">
                 <div class="column">
                     <div class="text-component">
-                        <h2 class="text-component__heading">Transform your brand</h1>
+                        <h2 class="text-component__heading">Transform your brand</h2>
                         <p class="text-component__paragraph">We are a full-service creative agency specializing in helping brands grow fast. 
                             Engage your clients through compelling visuals that do most of the marketing for you.</p>
-                        <div>
+                        <div class="text-component__link-container">
                             <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
                         </div>
                     </div>
@@ -58,9 +58,9 @@
                 <div class="column image image--glass"></div>
                 <div class="column">
                     <div class="text-component">
-                        <h2 class="text-component__heading">Stand out to the right audience</h1>
+                        <h2 class="text-component__heading">Stand out to the right audience</h2>
                         <p class="text-component__paragraph">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-                        <div>
+                        <div class="text-component__link-container">
                             <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
                         </div>
                     </div>
@@ -68,7 +68,20 @@
             </div>
         </section>
 
-
+        <section class="columns">
+            <div class="column show-component show-component--orange">
+                <div class="text-component text-component--remove-padding text-component--smaller-size">
+                    <h2 class="text-component__heading text-component__heading--center-text">Photography</h2>
+                    <p class="text-component__paragraph text-component__paragraph--center-text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+                </div>
+            </div>
+            <div class="column show-component show-component--cherry">
+                <div class="text-component text-component--remove-padding text-component--smaller-size">
+                    <h2 class="text-component__heading text-component__heading--center-text">Graphic design</h2>
+                    <p class="text-component__paragraph text-component__paragraph--center-text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
