--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <p class="nav-bar__logo">sunnyside</p>
         <svg id="nav-bar__hamburger-icon" class="nav-bar__hamburger-icon" width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill-rule="evenodd"/></svg>
         <nav class="nav-bar__nav">
-            <a href="#" class="body-text">About</a>
-            <a href="#" class="body-text">Services</a>
-            <a href="#" class="body-text">Projects</a>
-            <a href="#" class="body-text">Contact</a>
+            <a href="#" class="nav-bar__text">About</a>
+            <a href="#" class="nav-bar__text">Services</a>
+            <a href="#" class="nav-bar__text">Projects</a>
+            <a href="#" class="nav-bar__text nav-bar__text--contact-text">Contact</a>
         </nav>
     </header>
     <main>
@@ -41,11 +41,11 @@
             <div class="columns one-two-ordering">
                 <div class="column">
                     <div class="text-component">
-                        <h2 class="text-component__heading">Transform your brand</h2>
-                        <p class="text-component__paragraph">We are a full-service creative agency specializing in helping brands grow fast. 
+                        <h2 class="h2">Transform your brand</h2>
+                        <p class="body-text">We are a full-service creative agency specializing in helping brands grow fast. 
                             Engage your clients through compelling visuals that do most of the marketing for you.</p>
                         <div class="text-component__link-container">
-                            <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
+                            <a href="#" class="h2 h2--small">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -58,10 +58,10 @@
                 <div class="column image image--glass"></div>
                 <div class="column">
                     <div class="text-component">
-                        <h2 class="text-component__heading">Stand out to the right audience</h2>
-                        <p class="text-component__paragraph">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+                        <h2 class="h2">Stand out to the right audience</h2>
+                        <p class="body-text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
                         <div class="text-component__link-container">
-                            <a href="#" class="text-component__link text-component__heading text-component__heading--small">Learn More</a>
+                            <a href="#" class="h2 h2--small">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -71,15 +71,23 @@
         <section class="columns">
             <div class="column show-component show-component--orange">
                 <div class="text-component text-component--remove-padding text-component--smaller-size">
-                    <h2 class="text-component__heading text-component__heading--center-text">Photography</h2>
-                    <p class="text-component__paragraph text-component__paragraph--center-text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+                    <h2 class="h2 h2--center-text">Photography</h2>
+                    <p class="body-text body-text--center-text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
                 </div>
             </div>
             <div class="column show-component show-component--cherry">
                 <div class="text-component text-component--remove-padding text-component--smaller-size">
-                    <h2 class="text-component__heading text-component__heading--center-text">Graphic design</h2>
-                    <p class="text-component__paragraph text-component__paragraph--center-text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+                    <h2 class="h2 h2--center-text">Graphic design</h2>
+                    <p class="body-text body-text--center-text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="testimonial">
+                <img src="./imgs/image-thomas.jpg" alt="picture of emily" class="testimonial__image">
+                <p> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+                <h3>Thomas S.</h3>
             </div>
         </section>
     </main>
