testimonial-box componnent in good shape

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p class="body-text">We are a full-service creative agency specializing in helping brands grow fast. 
                             Engage your clients through compelling visuals that do most of the marketing for you.</p>
                         <div class="text-component__link-container">
-                            <a href="#" class="h2 h2--small">Learn More</a>
+                            <a href="#" class="h3">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <h2 class="h2">Stand out to the right audience</h2>
                         <p class="body-text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
                         <div class="text-component__link-container">
-                            <a href="#" class="h2 h2--small">Learn More</a>
+                            <a href="#" class="h3">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -84,10 +84,14 @@
         </section>
 
         <section class="testimonials">
-            <div class="testimonial">
-                <img src="./imgs/image-thomas.jpg" alt="picture of emily" class="testimonial__image">
-                <p> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-                <h3>Thomas S.</h3>
+            <h1 class="testimonials-heading">Client Testimonials</h1>
+            <div class="testimonial-box">
+                <img src="./imgs/image-thomas.jpg" alt="picture of emily" class="testimonial-box__image">
+                <p class="body-text"> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+                <div class="testimonial-box__credentials">
+                    <h3 class="h3">Thomas S.</h3>
+                    <h4 class="h4 u-margin-top-small">Chief Operating Officer</h4>
+                </div>
             </div>
         </section>
     </main>
