testimonials box done.

--- a/index.html
+++ b/index.html
@@ -83,14 +83,32 @@
             </div>
         </section>
 
-        <section class="testimonials">
-            <h1 class="testimonials-heading">Client Testimonials</h1>
-            <div class="testimonial-box">
-                <img src="./imgs/image-thomas.jpg" alt="picture of emily" class="testimonial-box__image">
-                <p class="body-text"> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-                <div class="testimonial-box__credentials">
-                    <h3 class="h3">Thomas S.</h3>
-                    <h4 class="h4 u-margin-top-small">Chief Operating Officer</h4>
+        <section class="testimonials-section">
+            <h1 class="testimonials-heading u-margin-top-large u-margin-bottom-large">Client Testimonials</h1>
+            <div class="testimonials">
+                <div class="testimonial-box">
+                    <img src="./imgs/image-emily.jpg" alt="picture of emily" class="testimonial-box__image">
+                    <p class="body-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+                    <div class="testimonial-box__credentials">
+                        <h3 class="h3">Emily R.</h3>
+                        <h4 class="h4 u-margin-top-small">Marketing Director</h4>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <img src="./imgs/image-thomas.jpg" alt="picture of thomas" class="testimonial-box__image">
+                    <p class="body-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+                    <div class="testimonial-box__credentials">
+                        <h3 class="h3">Thomas S.</h3>
+                        <h4 class="h4 u-margin-top-small">Chief Operating Officer</h4>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <img src="./imgs/image-jennie.jpg" alt="picture of jennie" class="testimonial-box__image">
+                    <p class="body-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+                    <div class="testimonial-box__credentials">
+                        <h3 class="h3">Jennie F.</h3>
+                        <h4 class="h4 u-margin-top-small">Business Owner</h4>
+                    </div>
                 </div>
             </div>
         </section>
