photo gallery implemented.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
                 </div>
             </div>
         </section>
+
+        <section class="photo-gallery">
+            <div class="photo-gallery__row">
+                <img src="./imgs/desktop/image-gallery-milkbottles.jpg" alt="milk bottles image">
+                <img src="./imgs/desktop/image-gallery-orange.jpg" alt="orange image">
+            </div>
+            <div class="photo-gallery__row">
+                <img src="./imgs/desktop/image-gallery-cone.jpg" alt="ice cream cone image">
+                <img src="./imgs/desktop/image-gallery-sugarcubes.jpg" alt="sugar cubes image">
+            </div>
+        </section>
     </main>
 </body>
 </html>
