contact button styled differently.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <p class="nav-bar__logo">sunnyside</p>
         <svg id="nav-bar__hamburger-icon" class="nav-bar__hamburger-icon" width="24" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill-rule="evenodd"/></svg>
         <nav class="nav-bar__nav">
-            <a href="#" class="nav-bar__text">About</a>
-            <a href="#" class="nav-bar__text">Services</a>
-            <a href="#" class="nav-bar__text">Projects</a>
-            <a href="#" class="nav-bar__text nav-bar__text--contact-text">Contact</a>
+            <a href="#" class="nav-bar__text a">About</a>
+            <a href="#" class="nav-bar__text a">Services</a>
+            <a href="#" class="nav-bar__text a">Projects</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
     <main>
@@ -45,7 +45,7 @@
                         <p class="body-text">We are a full-service creative agency specializing in helping brands grow fast. 
                             Engage your clients through compelling visuals that do most of the marketing for you.</p>
                         <div class="text-component__link-container">
-                            <a href="#" class="h3">Learn More</a>
+                            <a href="#" class="h3 a">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <h2 class="h2">Stand out to the right audience</h2>
                         <p class="body-text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
                         <div class="text-component__link-container">
-                            <a href="#" class="h3">Learn More</a>
+                            <a href="#" class="h3 a">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -130,9 +130,9 @@
             <p class="nav-bar__logo">sunnyside</p>
         </div>
         <ul>
-            <li><a href="#" class="body-text">About</a></li>
-            <li><a href="#" class="body-text">Services</a></li>
-            <li><a href="#" class="body-text">Projects</a></li>
+            <li><a href="#" class="body-text a">About</a></li>
+            <li><a href="#" class="body-text a">Services</a></li>
+            <li><a href="#" class="body-text a">Projects</a></li>
         </ul>
         <div class="icon-box">
             <svg class="icon icon-fb" width="20" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0z" fill="#2C7566" fill-rule="nonzero"/></svg>
